# finances-app

./: Dockerfile  app_settings.py  auth.py  build.dev.sh  database.py  database_crud.py  database_models.py  docker-compose.prod.yml  docker-compose.yml  logging.yaml  main.py  models.py  pyproject.toml  service.py  traefik.prod.toml  utils.py  validation.py
.github/workflows/: deploy.yml  docker-image.yml
